--- a/shared/releases.adoc
+++ b/shared/releases.adoc
@@ -52,7 +52,7 @@
 
 // Set to 'INCLUDE' when the schedule is available.
 
-:beta2-upcoming: INCLUDE
+:beta2-upcoming: IGNORE
 
 // Set to 'INCLUDE' when the installation images are available.
 
@@ -83,17 +83,17 @@
 // more (in addition to cleaning up this file) following the 11.3
 // release (likely as part of the 11.3 announcement commit). -gjb
 
-//:rel150-current-major: 15
+:rel150-current-major: 15
 :rel150-current: 15.0
-//:rel150-current-date: December 2, 2025
-//
-//:u-rel150-notes: https://www.FreeBSD.org/releases/{rel150-current}R/relnotes/
-//:u-rel150-announce: https://www.FreeBSD.org/releases/{rel150-current}R/announce/
-//:u-rel150-errata: https://www.FreeBSD.org/releases/{rel150-current}R/errata/
-//:u-rel150-hardware: https://www.FreeBSD.org/releases/{rel150-current}R/hardware/
-//:u-rel150-installation: https://www.FreeBSD.org/releases/{rel150-current}R/installation/
-//:u-rel150-readme: https://www.FreeBSD.org/releases/{rel150-current}R/readme/
-//:u-rel150-signatures: https://www.FreeBSD.org/releases/{rel150-current}R/signatures/
+:rel150-current-date: December 2, 2025
+
+:u-rel150-notes: https://www.FreeBSD.org/releases/{rel150-current}R/relnotes/
+:u-rel150-announce: https://www.FreeBSD.org/releases/{rel150-current}R/announce/
+:u-rel150-errata: https://www.FreeBSD.org/releases/{rel150-current}R/errata/
+:u-rel150-hardware: https://www.FreeBSD.org/releases/{rel150-current}R/hardware/
+:u-rel150-installation: https://www.FreeBSD.org/releases/{rel150-current}R/installation/
+:u-rel150-readme: https://www.FreeBSD.org/releases/{rel150-current}R/readme/
+:u-rel150-signatures: https://www.FreeBSD.org/releases/{rel150-current}R/signatures/
 
 :rel143-current-major: 14
 :rel143-current: 14.3
