--- a/website/content/en/portmgr/policies_eol.adoc
+++ b/website/content/en/portmgr/policies_eol.adoc
@@ -51,6 +51,14 @@ The _Estimated EoL (end-of-life)_ column gives the earliest date on which that b
 * FreeBSD:14:powerpc64le (only quarterly is updated)
 
 |June 30, 2026
+
+|stable/15 |n/a |releng/15.0 | |December 31, 2029
+|releng/15.0 |15.0-RELEASE |releng/15.0 a|
+* FreeBSD:15:aarch64
+* FreeBSD:15:amd64
+* FreeBSD:15:armv7
+
+|September 30, 2026
 |main |n/a |main a|
 * FreeBSD:16:aarch64
 * FreeBSD:16:amd64
