--- a/website/content/en/releases/_index.adoc
+++ b/website/content/en/releases/_index.adoc
@@ -25,6 +25,8 @@ For information about branches, release dates, and estimated end-of-life (EOL) d
 
 === Production Releases
 
+* *Release {rel150-current}* ({rel150-current-date}) _link:{u-rel150-announce}[Announcement] : link:{u-rel150-notes}[Release Notes] : link:{u-rel150-installation}[Installation Instructions] : link:{u-rel150-hardware}[Hardware Compatibility List] : link:{u-rel150-readme}[Readme] : link:{u-rel150-errata}[Errata] : link:{u-rel150-signatures}[Signed Checksums]_
+
 * *Release {rel143-current}* ({rel143-current-date}) _link:{u-rel143-announce}[Announcement] : link:{u-rel143-notes}[Release Notes] : link:{u-rel143-installation}[Installation Instructions] : link:{u-rel143-hardware}[Hardware Compatibility List] : link:{u-rel143-readme}[Readme] : link:{u-rel143-errata}[Errata] : link:{u-rel143-signatures}[Signed Checksums]_
 
 === Legacy
