--- a/website/content/en/security/_index.adoc
+++ b/website/content/en/security/_index.adoc
@@ -103,6 +103,8 @@ link:unsupported[Older releases] are not supported and users are strongly encour
 [cols=",,,",options="header",]
 |===
 |Branch |Release |Release Date |Expected EoL
+|stable/15 |n/a |n/a |December 31, 2029
+|releng/15.0 |15.0-RELEASE |December 2, 2025 |September 30, 2026
 |stable/14 |n/a |n/a |November 30, 2028
 |releng/14.3 |14.3-RELEASE |June 10, 2025 |June 30, 2026
 |stable/13 |n/a |n/a |April 30, 2026
