--- a/website/content/en/where.adoc
+++ b/website/content/en/where.adoc
@@ -39,6 +39,57 @@ For embedded platforms: SD card images are available.
 
 `RELEASE` versions of FreeBSD are the end result of _release engineering_ and are recommended for most users.
 
+[[download-rel150]]
+=== FreeBSD {rel150-current}-RELEASE
+
+[.tblbasic]
+[.tblDownload]
+[width="100%",cols="25%,25%,25%,25%",options="header",]
+|===
+|Installer |VM |SD Card |Documentation
+a|
+* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel150-current}/[amd64]
+* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[aarch64]
+* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel150-current}/[armv7]
+* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel150-current}/[powerpc64]
+* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel150-current}/[powerpc64le]
+* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel150-current}/[riscv64]
+
+a|
+* link:{url-rel}/VM-IMAGES/README.txt[README]
+* link:{url-rel}/VM-IMAGES/{rel150-current}-RELEASE/amd64/Latest/[amd64]
+* link:{url-rel}/VM-IMAGES/{rel150-current}-RELEASE/aarch64/Latest/[aarch64]
+* link:{url-rel}/VM-IMAGES/{rel150-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/CI-IMAGES/{rel150-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/CI-IMAGES/{rel150-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
+
+a|
+* aarch64
+* {blank}
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[PINE64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[PINE64-LTS]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[ROCK64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[ROCKPRO64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel150-current}/[RPI] (3/4)
+* armv7
+* {blank}
+** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel150-current}/[GENERICSD]
+* riscv64
+* {blank}
+** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel150-current}/[GENERICSD]
+
+a|
+* {blank}
+* link:../releases/#current[Released]: {rel150-current-date}
+* link:{u-rel150-notes}[Release Notes]
+* link:{u-rel150-readme}[Readme]
+* link:{u-rel150-hardware}[Hardware Compatibility List]
+* link:{u-rel150-installation}[Installation Instructions]
+* link:{u-rel150-errata}[Errata]
+* link:{u-rel150-signatures}[Signed Checksums]
+
+|===
+
 [[download-rel143]]
 === FreeBSD {rel143-current}-RELEASE
 
