--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -647,12 +647,22 @@ link:https://cloudmarketplace.oracle.com/marketplace/app/freebsd-release[Oracle 
 for more information.
 gitref:77b296a2582b[repository=src]
 
-The "shutdown" and "reboot" API in the Amazon EC2 cloud now work for arm64 instances.
-Older instances upgraded to FreeBSD {releaseCurrent} will need to have `debug.acpi.quirks="8"` set in `/boot/loader.conf`.
+The "shutdown" and "reboot" API in the Amazon EC2 cloud now work for arm64 ("Graviton") instances.
 gitref:28b881840df7[repository=src] (Sponsored by Amazon)
 
-The FreeBSD projects now publishes "small" EC2 images; these are the "base" images minus debug symbols, tests, 32-bit libraries, the LLDB debugger, the Amazon SSM Agent, and the AWS CLI.
+Several bug fixes and configuration changes collectively allow device hotplug on both x86 and arm64 ("Graviton") EC2 instances.
+gitref:ce9a34b1614e[repository=src]
+gitref:55c3348ed78f[repository=src]
+gitref:d70bac252d30[repository=src]
+(Sponsored by Amazon)
+
+Users upgrading EC2 instances from earlier FreeBSD releases should set `hw.pci.intx_reroute=0` and `debug.acpi.quirks="56"` in `/boot/loader.conf`.
+
+The FreeBSD project now publishes "small" EC2 images; these are the "base" images minus debug symbols, tests, 32-bit libraries, the LLDB debugger, the Amazon SSM Agent, and the AWS CLI.
 gitref:953142d6baf3[repository=src] (Sponsored by Amazon)
+
+The FreeBSD project now publishes "builder" EC2 images; these boot into a memory disk and extract a clean "base" image onto the root disk (mounted at `/mnt`) to be customized before creating an AMI.
+gitref:584265890303[repository=src] (Sponsored by Amazon)
 
 [[kernel]]
 == Kernel
@@ -1099,9 +1109,6 @@ gitref:f9e09dc5b1d5[repository=src]
 
 Under Hyper-V, TLB flushes are now performed using hypercalls rather than IPIs, providing up to a 40% improvement in TLB performance.
 gitref:7ece5993b787[repository=src] (Sponsored by Microsoft)
-
-Several bug fixes and configuration changes collectively allow device hotplug on both x86 and arm64 ("Graviton") EC2 instances.
-Users upgrading EC2 instances from earlier FreeBSD releases should set `hw.pci.intx_reroute=0` and `debug.acpi.quirks="56"` in `/boot/loader.conf`.
 
 [[linuxulator]]
 === Linux Binary Compatibility
