--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -664,6 +664,8 @@ gitref:953142d6baf3[repository=src] (Sponsored by Amazon)
 The FreeBSD project now publishes "builder" EC2 images; these boot into a memory disk and extract a clean "base" image onto the root disk (mounted at `/mnt`) to be customized before creating an AMI.
 gitref:584265890303[repository=src] (Sponsored by Amazon)
 
+FreeBSD "base" EC2 images now boot up to 76% faster than corresponding {releasePrev} images, with the largest improvements found on arm64 ("Graviton") instances.
+
 [[kernel]]
 == Kernel
 
