--- a/website/content/en/status/report-2025-07-2025-09/drm-drivers-slowdowns_fixes.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/drm-drivers-slowdowns_fixes.adoc
@@ -35,7 +35,7 @@ As for succeeding allocations, they would trigger useless changes to page attrib
 
 Finally, concerning specifically the amdgpu driver and affecting only Carrizo, Polaris and Vega M based AMD GPUs, a temporary allocation that was unnecessarily physically contiguous was replaced with a regular one, making the remaining, relatively short but noticeable freezes disappear.
 By contrast with those evoked above, this change is to the `drm-kmod` ports' code.
-It has been included in the lastest version bumps in the ports tree.
+It has been included in the latest version bumps in the ports tree.
 Check that your package versions, for `drm-510-kmod`, `drm-515-kmod`, `drm-61-kmod` and `drm-66-kmod`, are respectively equal or greater than ``5.10.163.\*_13``, ``5.15.160.*_8``, ``6.1.128.*_7`` and ``6.6.25.*_6``, where ``*`` stands for the ``__FreeBSD_version`` value on the build system.
 
 This work was sponsored by the FreeBSD Foundation as part of the Laptop Project.
