--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1172,6 +1172,9 @@ gitref:e87848a8150e[repository=src]
 
 This section covers the boot loader, boot menu, and other boot-related changes.
 
+The ASCII man:loader[8] art may once again be enabled on graphical systems via an optional `loader_gfx` variable in loader.conf[5].
+gitref:bef6d85b6de5[repository=src]
+
 The man:loader[8] now reads local configuration files listed in the variable `local_loader_conf_files` after other configuration files, defaulting to [.filename]#/boot/loader.conf.local#.
 gitref:a25531db0fc2[repository=src]
 
