Mention bmake update

--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -498,6 +498,11 @@ One True Awk (man:awk[1]) has been updated to 2nd Edition, with new -csv support
 The snapshot used is 20250804.
 gitref:b45a181a74c8[repository=src]
 
+`bmake` has been upgraded to 20250804, providing many debugging
+improvements, bug fixes such as detecting and rejecting `gmake`
+syntax, and feature improvements such as a floating point argument to
+`-j` being used as a multiple of the number of cpus available.
+
 The man:sendmail[8] suite has been upgraded to version 8.18.1, addressing CVE-2023-51765.
 gitref:58ae50f31e95[repository=src]
 
