--- a/website/content/en/status/report-2025-07-2025-09/alpha-omega-beach-cleaning.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/alpha-omega-beach-cleaning.adoc
@@ -1,7 +1,7 @@
 === Alpha-Omega Beach Cleaning project
 
 Links: +
-link:https://alpha-omega.dev[Alpha-Omega - Linux Foundation Project] URL: link:https://alpha-omega.dev[] +
+link:https://alpha-omega.dev[Alpha-Omega -- Linux Foundation Project] URL: link:https://alpha-omega.dev[] +
 link:https://github.com/ossf/alpha-omega[Alpha-Omega on GitHub] URL: link:https://github.com/ossf/alpha-omega[] +
 link:https://freebsdfoundation.org[FreeBSD Foundation] URL: link:https://freebsdfoundation.org[] +
 link:https://github.com/FreeBSDFoundation/alpha-omega-beach-cleaning[Project repository from the FreeBSD Foundation] URL: link:https://github.com/FreeBSDFoundation/alpha-omega-beach-cleaning[]
