--- a/website/content/en/status/report-2025-07-2025-09/bananapi-r64-drivers.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/bananapi-r64-drivers.adoc
@@ -11,9 +11,9 @@ The Banana Pi R64 is a MediaTek MT7622-based development board (ARM Cortex-A53, 
   * **UART driver**
   * **Clock management (clocks)**
   * **Pinctrl/gpio driver** – in active development gpio part
-  * **Storage controllers (eMMC/SD/MMC) driver
-  * **Ethernet Switch mt7531 driver
-  * **Ethernet mt7622 driver
+  * **Storage controllers (eMMC/SD/MMC) driver**
+  * **Ethernet Switch mt7531 driver**
+  * **Ethernet mt7622 driver**
 
 Other essential components—Ethernet, USB, SATA, Wi-Fi, etc.—are not yet implemented.
 
