--- a/website/content/en/status/report-2025-07-2025-09/hackathon.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/hackathon.adoc
@@ -3,7 +3,7 @@
 Links:
 link:https://wiki.freebsd.org/Hackathon/202507[Event page] URL: link:https://wiki.freebsd.org/Hackathon/202507[] +
 
-Date: July Saturday 12th and Sunday 13th 2025
+Date: July Saturday 12th and Sunday 13th 2025 +
 Location: Chaos Computer Club Berlin
 
 We had been invited to hold our two day Hackathon in the halls of the Chaos Computer Club Berlin.
