--- a/website/content/en/status/report-2025-07-2025-09/nuageinit.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/nuageinit.adoc
@@ -1,4 +1,4 @@
-=== Cloud: Improvements for nuageinit
+=== Improvements for nuageinit
 
 Contact: Baptiste Daroussin <bapt@FreeBSD.org> +
 Contact: Jesús Daniel Colmenares Oviedo <dtxdf@FreeBSD.org>
