--- a/website/content/en/status/_index.adoc
+++ b/website/content/en/status/_index.adoc
@@ -7,7 +7,7 @@ include::shared/en/urls.adoc[]
 
 = FreeBSD Status Reports
 
-== Next Quarterly Status Report submissions (July -- September) due: September 30th, 2025
+== Next Quarterly Status Report submissions (October -- December) due: December 31st, 2025
 
 If you are interested in submitting status reports or you are curious about how the publication process works, please see our link:{freebsd-status-report-process}[status report process description].
 
@@ -23,6 +23,7 @@ These status reports may be reproduced in whole or in part, as long as the sourc
 
 == 2025
 
+* link:report-2025-07-2025-09/[July, 2025 - September, 2025]
 * link:report-2025-04-2025-06/[April, 2025 - June, 2025]
 * link:report-2025-01-2025-03/[January, 2025 - March, 2025]
 
