Status/2025Q3: More fixes
Use the same style for all links section.

--- a/website/content/en/status/report-2025-07-2025-09/doceng.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/doceng.adoc
@@ -8,6 +8,7 @@ Version:	$Id:$
 
 === Documentation Engineering Team
 
+Links: +
 link:https://www.freebsd.org/docproj/[FreeBSD Documentation Project] URL: link:https://www.freebsd.org/docproj/[] +
 link:https://docs.freebsd.org/en/books/fdp-primer/[FreeBSD Documentation Project Primer for New Contributors] URL: link:https://docs.freebsd.org/en/books/fdp-primer/[] +
 link:https://www.freebsd.org/administration/#t-doceng[Documentation Engineering Team] URL: link:https://www.freebsd.org/administration/#t-doceng[]
