--- a/website/content/en/status/report-2025-07-2025-09/freebsd-git-weekly.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/freebsd-git-weekly.adoc
@@ -1,6 +1,6 @@
 === FreeBSD Git Weekly
 
-links: +
+Links: +
 link:https://freebsd-git-weekly.tarsnap.net/[FreeBSD Git Weekly] URL: link:https://freebsd-git-weekly.tarsnap.net/[]
 
 Contact: Graham Percival <gperciva@tarsnap.com>
