--- a/website/content/en/status/report-2025-07-2025-09/hackathon.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/hackathon.adoc
@@ -1,7 +1,7 @@
 === July 2025 FreeBSD Hackathon in Berlin, Germany
 
-Links:
-link:https://wiki.freebsd.org/Hackathon/202507[Event page] URL: link:https://wiki.freebsd.org/Hackathon/202507[] +
+Links: +
+link:https://wiki.freebsd.org/Hackathon/202507[Event page] URL: link:https://wiki.freebsd.org/Hackathon/202507[]
 
 Date: July Saturday 12th and Sunday 13th 2025 +
 Location: Chaos Computer Club Berlin
