--- a/website/content/en/status/report-2025-07-2025-09/bananapi-r64-drivers.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/bananapi-r64-drivers.adoc
@@ -1,7 +1,9 @@
 === FreeBSD Driver Development for BananaPi-R64
 
+Links: +
+link:https://wiki.freebsd.org/arm/Bananapi[Wiki] URL: link:https://wiki.freebsd.org/arm/Bananapi[]
+
 Contact: Martin Filla <freebsd@sysctl.cz>
-Wiki:	 https://wiki.freebsd.org/arm/Bananapi
 
 ==== Introduction
 The Banana Pi R64 is a MediaTek MT7622-based development board (ARM Cortex-A53, dual-core ~1.35 GHz) featuring 4× Gigabit LAN, 1× Gigabit WAN, Wi-Fi (4×4n), Bluetooth 5.0, and multiple peripheral interfaces (UART, SPI, I²C, GPIO, SATA, mini-PCIe, eMMC, etc.).
