--- a/website/content/en/status/report-2025-07-2025-09/gallant.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/gallant.adoc
@@ -1,7 +1,7 @@
 === The Gallant Console Font got Supercharged
 
 Links: +
-link:https://github.com/NanoBillion/gallant[Gallant Project] description] URL: link:https://github.com/NanoBillion/gallant[]
+link:https://github.com/NanoBillion/gallant[Gallant Project] URL: link:https://github.com/NanoBillion/gallant[]
 
 Contact: Jens Schweikhardt <schweikh@FreeBSD.org>
 
