ff report 2025 q3: timeout handling -> timeout(1)
It is not about 'timeout handling', it is races in the timeout(1)
utility.

Sponsored by:	The FreeBSD Foundation

--- a/website/content/en/status/report-2025-07-2025-09/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/freebsd-foundation.adoc
@@ -38,11 +38,11 @@ Other highlights include:
 * Improved virtual memory scalability, allowing multiple processes to load shared libraries in parallel.
 * Greater UFS reliability on very large filesystems (with more than 2 billion inodes).
 * Support for systems with over 4 TB of RAM, including a reworked Kernel Virtual Address (KVA) layout tailored for the 57-bit address space (LA57) architecture.
-* Kqueue inheritance across `fork()`.
+* Kqueue inheritance across `fork(2)`.
 * A new safeguard (`noshutdown`) to help prevent accidental system shutdown.
 * Simplified and more reliable filesystem rename operations.
 * A fix for amd64 pmap panics under low-memory conditions.
-* Numerous fixes for race conditions in timeout handling.
+* Numerous fixes for race conditions in timeout(1).
 * A new EXTERROR(9) interface, standardizing how external applications can report detailed error information.
 
 The Foundation also continued to support two major initiatives: the Laptop Support and Usability project (in collaboration with link:https://www.ql-research.com/[Quantum Leap Research]) and an <<_infrastructure_modernization,infrastructure modernization project>> commissioned by the link:https://www.sovereign.tech/[Sovereign Tech Agency].
