--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -934,6 +934,24 @@ For machines that provide both, leverage the v3 table in priority consistently w
 gitref:bc7f6508363c[repository=src]
 (Sponsored by The FreeBSD Foundation.)
 
+The man:usbhid[4] driver is now enabled by default, and is used in preference to other USB HID drivers like man:ukbd[4], man:ums[4], and man:uhid[4].
+Supported device classes now include:
+
+- Absolute‐positioning mice in virtualized environments via man:hms[4]
+- Digitizers and stylus devices via man:hpen[4]
+- Compound HID devices, such as keyboards and mice that share
+  a single USB interface
+- Special keyboard function keys (volume, brightness, etc.) via man:hcons[4]
+  and man:hsctrl[4]
+- Game controllers, including Xbox 360 and PS4 gamepads via man:xb360gp[4] and
+  man:ps4dshock[4], and generic controllers via man:hgame[4]
+- Raw HID devices via man:hidraw[4]
+
+FIDO/U2F security tokens continue to be supported through the autoloaded
+man:u2f[4] driver. Device names and protocol handling for these devices are
+unchanged.
+gitref:74072e9f16c1[repository=src] (Sponsored by The FreeBSD Foundation)
+
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
