--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -691,6 +691,13 @@ Support legacy PCI hotplug on arm64.
 gitref:355f02cddbf0[repository=src].
 (Sponsored by Arm Ltd).
 
+Jails can now be accessed via jail descriptors in jail_set(2) and jail_get(2), as well as the new jail_attach_jd(2) and jail_remove_jd(2).  They allow manipulation of jails through the file descriptor interface without the race conditions inherent in jail IDs, and can also optionally control jail lifetime.
+gitref:851dc7f859c2[repository=src]
+
+Jails and jail descriptors now have associated kevent(2) filters that allow tracking jail creation, changes, attachment, and removal.
+gitref:1bd74d201a53[repository=src]
+gitref:66d8ffe3046d[repository=src]
+
 A new common 'mac' node for MAC modules' jail parameters has been created.
 All future MAC modules' jail parameters will appear under this node.
 See man:mac[4] for an introduction to MAC.
