Status/2025Q3/core.adoc: typos

--- a/website/content/en/status/report-2025-07-2025-09/core.adoc
+++ b/website/content/en/status/report-2025-07-2025-09/core.adoc
@@ -32,7 +32,7 @@ Core is currently working on the following items:
 
 * Committer mentorship guideline/rule
   - Brought up by inquirers from the developers.
-  - Core idendified there are some existing documentations but should ask doceng/portmgr/srcmgr for more input.
+  - Core identified there are some existing documentations but should ask doceng/portmgr/srcmgr for more input.
 
 * Core election and term changes
   - From the feedback of the community, the preferred way is staggered core terms.
@@ -46,7 +46,7 @@ Core is currently working on the following items:
   - Core is continuously working on this toward to setup staggered core terms.
 
 * Project continuity
-  - Brought up by an inquriy from a developer
+  - Brought up by an inquiry from a developer
   - We need (updated) documentation on how to rebuild the critical systems to ensure business continuity of the FreeBSD Project.
     This encompasses three aspects:
       - Our own project business continuity (loss of key personnel or infrastructure)
