--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -952,6 +952,9 @@ man:u2f[4] driver. Device names and protocol handling for these devices are
 unchanged.
 gitref:74072e9f16c1[repository=src] (Sponsored by The FreeBSD Foundation)
 
+The man:ufshci[4] driver has been added, supporting Universal Flash Storage (UFS) host controllers.
+gitref:1349a733cf28[repository=src] (Sponsored by Samsung Electronics)
+
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
