--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -498,6 +498,9 @@ One True Awk (man:awk[1]) has been updated to 2nd Edition, with new -csv support
 The snapshot used is 20250804.
 gitref:b45a181a74c8[repository=src]
 
+The man:jemalloc[3] library has been updated to version 5.3.0.
+gitref:c43cad871720[repository=src]
+
 `bmake` has been upgraded to 20250804, providing many debugging
 improvements, bug fixes such as detecting and rejecting `gmake`
 syntax, and feature improvements such as a floating point argument to
@@ -514,8 +517,8 @@ Existing setups will continue to work emitting a warning.
 The snapshot used is 20251026.
 gitref:4afb96fdd272[repository=src].
 
-`libarchive` has been upgraded to 3.7.7.
-gitref:2ae238160f20[repository=src]
+`libarchive` has been upgraded to 3.8.2.
+gitref:8a0b57ba54f0[repository=src]
 
 `libcbor` has been upgraded to 0.11.0.
 gitref:1755b9daa693[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
@@ -532,29 +535,30 @@ gitref:26f21a6494b4[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 `tcpdump` has been upgraded to 4.99.5.
 gitref:ec3da16d8bc1[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
-`unbound` has been upgraded to 1.22.0.
-gitref:0a096a7b3ae8[repository=src]
+`unbound` has been upgraded to 1.24.1.
+gitref:a988846174e0[repository=src]
 
 `llvm` has been upgraded to 19.1.7-0-gcd708029e0b2.
 gitref:dc3f24ea8a25[repository=src]
 
+man:zfs[8]: OpenZFS has been updated to zfs-2.4.0-rc4(gitref:7b5b0f43eb06[repository=src]).
 
-man:zfs[8]: OpenZFS has been updated to zfs-2.2-release(2.2.7)(gitref:2ec8b6948070[repository=src]).
+man:xz[1] has been updated to 5.8.1(gitref:128836d304d9[repository=src]).
 
-man:xz[1] has been updated to 5.8.1(gitref:9679eedea94c[repository=src]).
+man:less[1] has been updated to v679(gitref:76bafc906926[repository=src]).
 
-man:less[1] has been updated to v668(gitref:0bb4c188d363[repository=src]).
+man:file[1] has been updated to 5.46(gitref:ae316d1d1cff[repository=src]).
 
-man:file[1] has been updated to 5.46(gitref:71c92e6b94f0[repository=src]).
+man:expat[3] has been updated to 2.7.3(gitref:860583c83ef2[repository=src]).
 
-man:expat[3] has been updated to 2.7.1(gitref:6f7ee9ac036e[repository=src]).
+man:zlib[3] has been updated to 1.3.1(gitref:6255c67c3d1a[repository=src])
 
 `tzdata` has been updated to 2025b(gitref:475082194ac8[repository=src]).
 
-OpenSSH has been updated to 9.9p2(gitref:059b786b7db5[repository=src]).
+OpenSSH has been updated to 10.0p2(gitref:8e28d84935f2[repository=src]).
 {{< sponsored "The FreeBSD Foundation" >}}
 
-OpenSSL has been updated to 3.0.16(gitref:cb29db243bd0[repository=src]).
+OpenSSL has been updated to 3.5.4(gitref:c0366f908ff4[repository=src]).
 
 `googletest` has been updated from 1.14.0 to 1.15.2(gitref:1d67cec52542[repository=src]).
 One notable change is that GoogleTest 1.15.x now officially requires C++-14 (1.14.x required C++-11).
@@ -627,7 +631,7 @@ There is no specific timeline yet for removing it, but support for the Giant loc
 (gitref:8c922db4f3d9[repository=src]).
 {{< sponsored "The FreeBSD Foundation" >}}
 
-OpenSSH plans to remove support for the DSA signature algorithm in early 2025.
+The cryptographically weak DSA signature algorithm was removed from OpenSSH, following upstream.
 
 man:publickey[5] stuffs has been deprecated.
 This uses DES and it is likely that nobody uses that in 2025.
