--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -491,6 +491,15 @@ gitref:4ffcb1a4a99c[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
 {{< sponsored "Google LLC (GSoC 2025)" >}}
 
+When booting in single-user mode, man:init[8] now changes the working directory to `/root`, using `/` only as a fallback.
+The `/.profile` link to `/root/.profile` is no more installed.
+gitref:b4b91207ab6f[repository=src]
+gitref:ca771d7ae527[repository=src]
+
+The deprecated man:ftpd[8] has been removed from the base system.
+Users who still need it can install the `ftp/freebsd-ftpd` port.
+gitref:259bb93b80c0[repository=src]
+
 [[userland-contrib]]
 === Contributed Software
 
@@ -700,7 +709,7 @@ gitref:851dc7f859c2[repository=src]
 
 Jails and jail descriptors now have associated kevent(2) filters that allow tracking jail creation, changes, attachment, and removal.
 gitref:1bd74d201a53[repository=src]
-gitref:66d8ffe3046d[repository=src]
+gitref:9d7f89ef2607[repository=src]
 
 A new common 'mac' node for MAC modules' jail parameters has been created.
 All future MAC modules' jail parameters will appear under this node.
@@ -957,6 +966,10 @@ The man:udbc[4] driver has been added enabling host side debugging of targets us
 The man:ufshci[4] driver has been added, supporting Universal Flash Storage (UFS) host controllers.
 gitref:1349a733cf28[repository=src]  {{< sponsored "Samsung Electronics" >}}
 
+The man:qat[4] driver has grown support for the 402xx device with ID 0x4944/0x4945.
+gitref:138e36514fe8[repository=src]
+{{< sponsored "Intel Corporation" >}}
+
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
@@ -1121,6 +1134,13 @@ This fixes synchronizing of states with route-to, af-to, rtable, dummynet, tags,
 If synchronization with an older version of FreeBSD is needed the protocol version can be configured with `ifconfig pfsync0 version $VERSION` where $VERSION is 1301 for 13.X relases or 1400 for 14.X.
 It defaults to 1500 for synchronization between hosts running FreeBSD 15.0.
 gitref:99475087d63b[repository=src] {{< sponsored "InnoGames GmbH" >}}
+
+Kernel compatibility code supporting man:ipfw[8] binaries from FreeBSD 7 and 8 has been removed.
+gitref:660255be1ed9[repository=src]
+{{< sponsored "The FreeBSD Foundation" >}}
+
+man:sockstat[4] will show UDP-Lite endpoints by default.
+gitref:978615d7bf7c[repository=src]
 
 [[wireless-networking]]
 === Wireless Networking
