--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -667,7 +667,7 @@ The FreeBSD project now publishes "small" EC2 images; these are the "base" image
 gitref:953142d6baf3[repository=src] {{< sponsored "Amazon" >}}
 
 The FreeBSD project now publishes "builder" EC2 images; these boot into a memory disk and extract a clean "base" image onto the root disk (mounted at `/mnt`) to be customized before creating an AMI.
-gitref:584265890303[repository=src] (Sponsored by Amazon)
+gitref:584265890303[repository=src] {{< sponsored "Amazon" >}}
 
 FreeBSD "base" EC2 images now boot up to 76% faster than corresponding {releasePrev} images, with the largest improvements found on arm64 ("Graviton") instances.
 
@@ -950,10 +950,10 @@ Supported device classes now include:
 FIDO/U2F security tokens continue to be supported through the autoloaded
 man:u2f[4] driver. Device names and protocol handling for these devices are
 unchanged.
-gitref:74072e9f16c1[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:74072e9f16c1[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 The man:ufshci[4] driver has been added, supporting Universal Flash Storage (UFS) host controllers.
-gitref:1349a733cf28[repository=src] (Sponsored by Samsung Electronics)
+gitref:1349a733cf28[repository=src]  {{< sponsored "Samsung Electronics" >}}
 
 [[drivers-removals]]
 === Deprecated and Removed Drivers
@@ -1103,17 +1103,17 @@ While this change exposes a vnet loader tunable 'net.pf.default_to_drop' so that
 gitref:3965be101c43[repository=src]
 
 A new man:pf[4] route-to pool option "prefer-ipv6-nexthop" allows for routing IPv4 packets over IPv6 gateways.
-gitref:65c318630123[repository=src] gitref:d2761422eb0a[repository=src] (Sponsored by InnoGames GmbH)
+gitref:65c318630123[repository=src] gitref:d2761422eb0a[repository=src] {{< sponsored "InnoGames GmbH" >}}
 
 man:pf[4] now supports the OpenBSD style NAT syntax.
 It is possible to use "nat-to", "rdr-to" and "binat-to" on "pass" and "match" rules. The old "nat on ..." syntax can still be used.
-gitref:e0fe26691fc9[repository=src] (Sponsored by InnoGames GmbH)
+gitref:e0fe26691fc9[repository=src] {{< sponsored "InnoGames GmbH" >}}
 
 The man:pfsync[4] protocol has been updated to synchronize multiple missing attributes.
 This fixes synchronizing of states with route-to, af-to, rtable, dummynet, tags, and scrub options.
 If synchronization with an older version of FreeBSD is needed the protocol version can be configured with `ifconfig pfsync0 version $VERSION` where $VERSION is 1301 for 13.X relases or 1400 for 14.X.
 It defaults to 1500 for synchronization between hosts running FreeBSD 15.0.
-gitref:99475087d63b[repository=src] (Sponsored by InnoGames GmbH)
+gitref:99475087d63b[repository=src] {{< sponsored "InnoGames GmbH" >}}
 
 [[wireless-networking]]
 === Wireless Networking
