--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -500,6 +500,10 @@ The deprecated man:ftpd[8] has been removed from the base system.
 Users who still need it can install the `ftp/freebsd-ftpd` port.
 gitref:259bb93b80c0[repository=src]
 
+Add a `-f` option to `kadmin -l dump` which can be used to dump the Heimdal KDC database in a format that can be loaded into the MIT KDC. See https://wiki.freebsd.org/Kerberos/Heimdal2MIT_KDC_Migration for how to use `-f` to transfer/convert the KDC database.
+gitref:9fd3b28d4e0d[repository=src]
+gitref:23fbea8cf2f3[repository=src]
+
 [[userland-contrib]]
 === Contributed Software
 
@@ -574,6 +578,57 @@ One notable change is that GoogleTest 1.15.x now officially requires C++-14 (1.1
 
 `spleen` has been updated to Spleen 2.1.0(gitref:26336203d32c[repository=src]).
 
+MIT KRB5 1.22.1 Kerberos replaces Heimdal 1.5.2 by default.
+Heimdal 1.5.2 can still be built using the `WITHOUT_MITKRB5` flag.
+Heimdal Kerberos will be entirely removed in FreeBSD 16.
+See also the note about the `-f` flag to `kadmin -l dump` under section <<userland-programs>>.
+gitref:ee3960cba106[repository=src],
+gitref:0b9a631e0724[repository=src],
+gitref:60f970b85e44[repository=src],
+gitref:0d1496f0f1e7[repository=src],
+gitref:cbb6e747af98[repository=src],
+gitref:0559f30a882d[repository=src],
+gitref:ae07a5805b19[repository=src],
+gitref:f58febc4cefa[repository=src],
+gitref:805498e49ae4[repository=src],
+gitref:4cb1baa7d85c[repository=src],
+gitref:188138106b9f[repository=src],
+gitref:4680e7fcc70a[repository=src],
+gitref:e447c252d0ec[repository=src],
+gitref:5f8493bbf479[repository=src],
+gitref:110111a6cca1[repository=src],
+gitref:2a454b05f2c1[repository=src],
+gitref:98d46e05ab08[repository=src],
+gitref:6b28571cb6ba[repository=src],
+gitref:ca9ccf0ce9ad[repository=src],
+gitref:b98d0566b2bd[repository=src],
+gitref:fb1ccc04adfe[repository=src],
+gitref:dd0ec030f8fd[repository=src],
+gitref:6c4771c73470[repository=src],
+gitref:7b68893ffa9b[repository=src],
+gitref:624b7beed5ac[repository=src],
+gitref:04764f21855a[repository=src],
+gitref:73ed0c7992fd[repository=src],
+gitref:40a5abfc3f66[repository=src],
+gitref:543b875a8ee4[repository=src],
+gitref:c791ea80b5f7[repository=src],
+gitref:383e7290c0b5[repository=src],
+gitref:9a726ef24134[repository=src],
+gitref:a245dc5d68c7[repository=src],
+gitref:e26259f48afe[repository=src],
+gitref:7d2cfb27d62f[repository=src],
+gitref:619feb9dd00e[repository=src],
+gitref:10eecc467f32[repository=src],
+gitref:0c13e9c3c464[repository=src],
+gitref:89c82750da1a[repository=src],
+gitref:18a870751b03[repository=src],
+gitref:ce9c325a2e92[repository=src],
+gitref:cb3eac927b5d[repository=src],
+gitref:5105e1ebecc7[repository=src],
+gitref:b9b0e105c357[repository=src],
+gitref:929f5966a9fd[repository=src]
+{{< sponsored "The FreeBSD Foundation" >}}
+
 [[userland-libraries]]
 === Runtime Libraries and API
 
@@ -625,6 +680,12 @@ Those that are themselves using compatibility system calls would not reference t
 This has been fixed.
 gitref:47f5f89dbd27[repository=src]
 {{< sponsored "The FreeBSD Foundation" >}}
+
+[[userland-misc]]
+=== Misc
+
+The Gallant font for man:vt[4] has been updated with more than 4300 new glyphs, including support for Greek, Cyrillic, International Phonetic Association Extensions, Extended Latin characters, Zapf Dingbats, Tons of arrows, Tons of mathematical symbols, Letterlike symbols and enclosed alphanumerics, Pixel-perfect box drawing, Currency symbols, More punctuation, Just enough Katakana to say コンニチハ, Powerline glyphs in the Private Use Area at U+e0a0.
+gitref:9e8c1ab0976c[repository=src]
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
@@ -970,6 +1031,10 @@ The man:qat[4] driver has grown support for the 402xx device with ID 0x4944/0x49
 gitref:138e36514fe8[repository=src]
 {{< sponsored "Intel Corporation" >}}
 
+Support for the watchdog timer in Intel 6300ESB I/O controller hub has been included in the man:ichwd[4] driver.
+This is intended primarily for QEMU users, where that watchdog timer serves as the default and only one for x86 virtual machines.
+gitref:2b74ff5fceb6623f6[repository=src]
+
 [[drivers-removals]]
 === Deprecated and Removed Drivers
 
@@ -996,6 +1061,10 @@ New man:sysctl[8] variables have been added under `kern.rpc.unenc` and `kern.rpc
 A large number of failed handshakes might indicate an NFS configuration problem.
 gitref:b8e137d8d32d[repository=src]
 
+New support for the NFSv4.2 Clone operation, which uses block cloning to "copy on write" files on an NFS server.
+This only works for exported ZFS file systems that have block cloning enabled, at this time.
+gitref:cce64f2e6851[repository=src]
+
 [[storage-ufs]]
 === UFS
 
@@ -1004,6 +1073,12 @@ gitref:6b2af2d88ffd[repository=src]
 
 [[storage-zfs]]
 === ZFS
+
+Add support to `VOP_COPY_FILE_RANGE()` for block cloning.
+At this time, ZFS is the only local file system that supports this and only if block cloning is enabled.
+NFSv4.2 also supports it.
+See `pathconf(2)` and `copy_file_range(2)` for more information.
+gitref:37b2cb5ecb0f[repository=src]
 
 [[storage-general]]
 === General Storage
@@ -1142,6 +1217,9 @@ gitref:660255be1ed9[repository=src]
 man:sockstat[4] will show UDP-Lite endpoints by default.
 gitref:978615d7bf7c[repository=src]
 
+A new man:ngctl[8] flag, `-j`, allows it to attach and run inside a jail, making it possible to manipulate netgraph nodes in a jail even if man:ngctl[8] is not installed inside it.
+gitref:72d01e62b082[repository=src]
+
 [[wireless-networking]]
 === Wireless Networking
 
@@ -1188,6 +1266,17 @@ The Linux man:inotify[2] system calls are now implemented in the Linuxulator.
 Many improvements to the audio stack including support for hot-swapping in man:mixer[8], and the addition of man:mididump[1].
 gitref:cf9d2fb18433[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 gitref:7224e9f2d4af[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
+`virtual_oss` is imported to base. The `audio/virtual_oss` port will stop being built from FreeBSD 15.0 onwards.
+Regarding user-facing changes, the only practical difference is the installation process. Everything is provided by the base system, except for the following optional components, which can be installed from ports:
+
+* sndio backend support: `audio/virtual_oss_sndio`
+* bluetooth backend support: `audio/virtual_oss_bluetooth`
+* `virtual_equalizer(8)`: `audio/virtual_oss_equalizer`
+
+Apart from that, `virtual_oss` should work as expected. Users of `virtual_oss` can uninstall `audio/virtual_oss` and instead use the base system version from now on.
+gitref:5a31c623143f[repository=src]
+{{< sponsored "The FreeBSD Foundation" >}}
 
 [[documentation]]
 == Documentation
@@ -1268,6 +1357,9 @@ gitref:655fcdde1aff[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 The package:net/wifi-firmware-kmod@release[] package has been added to the DVD ISO, providing firmware for a broader set of Wi-Fi drivers.
 gitref:8c6df7ead19c[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+
+The `FreeBSD-base` repository is now defined in `/etc/pkg/FreeBSD.conf`, disabled by default.  Systems which installed with pkgbase prior to 15.0-RC1 (if running `releng/15.0`) or November 15th (if running from `stable`/`main` snapshots) will need to remove the definition of the `FreeBSD-base` repository from `/usr/local/etc/pkg/repos/` and replace it with a single line `FreeBSD-base: { enabled: yes }`.
+gitref:5d832135a971[repository=src]
 
 [[future-releases]]
 == General Notes Regarding Future FreeBSD Releases
